manifests/apps/plane/network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane
  namespace: plane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-home
    kubernetes.io/ingress.class: nginx                  # home, # Dankata, # Marina/Zhelezhnitsa
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.8.0.0/24,92.247.208.224/32,87.243.107.94/32,151.237.55.238/32"
  labels:
    app: plane
    env: home
spec:
  tls:
  - hosts:
    - board.iaminyourpc.xyz
    secretName: tls-board-iaminyourpc-xyz
  rules:
  - host: board.iaminyourpc.xyz
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: plane-api
            port:
              number: 8000
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: plane-api
            port:
              number: 8000
      - pathType: Prefix
        path: /god-mode
        backend:
          service:
            name: plane-admin
            port:
              number: 3000
      - pathType: Prefix
        path: /spaces
        backend:
          service:
            name: plane-space
            port:
              number: 3000
      - pathType: Prefix
        path: /live/
        backend:
          service:
            name: plane-live
            port:
              number: 3000
      - pathType: Prefix
        path: /uploads
        backend:
          service:
            name: plane-minio
            port:
              number: 9000
      - pathType: Prefix
        path: /
        backend:
          service:
            name: plane-web
            port:
              number: 3000
